--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
 <html lang="pl">
 <head>
 	<meta charset="utf-8" />
-	<title>Git Starter Test</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<style>
-	body
-	{
-	background-color:grey;
-	color:white;
-	}
-	</style>
+	<title>Git Starter Test</title>
+	<link href="styles/style.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
 
-FlashCardsDemo
+FlashCardsDemo JS
 
 </body>
 </html>
