--- a/index.html
+++ b/index.html
@@ -1,15 +1,51 @@
 <!DOCTYPE HTML>
 <html lang="pl">
+
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Git Starter Test</title>
+	<title>Flash Cards Demo</title>
 	<link href="styles/style.css" rel="stylesheet" type="text/css">
-
 </head>
-<body>
 
-FlashCardsDemo JS
+<body>
+<div class="container">
+
+	<!------------------------------ TOP ------------------------------>
+	<header>
+		<h2>Flash Cards Demo</h2> 
+	</header>
+
+	<div id="div_button_top_right">
+		<button onclick="change_language_button()" id="change_language_button_style"> 
+			<span id="spEN">EN</span> / <span id="spPL">PL</span></button>
+	</div>
+
+	<!------------------------------ CONTENT ------------------------------>
+	<div class="content">
+		<div class="horizontal_wrap">
+			<div class="tab_all tab_header">Angielski</div>
+			<div class="tab_all tab_body" id="en">Cat</div>
+		</div>
+
+		<div class="clear_float"></div>
+		
+		<div class="horizontal_wrap">
+			<div class="tab_all tab_header">Polski</div>
+			<div class="tab_all tab_body" id="pl">Kot</div>
+		</div>
+
+		<div class="clear_float"></div>
+		
+		<div class="horizontal_wrap">
+			<div class="tab_all tab_header">Wymowa</div>
+			<div class="tab_all tab_body" id="pron">Kat</div>
+		</div>
+
+		<div class="clear_float"></div>
+	</div>
+
+</div>
 
 <script src="js/main.js"></script>
 </body>
