js start coding

--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
 		<div class="centered">
 			<div class="horizontal_wrap">
 				<div class="tab_all tab_header">Angielski</div>
-				<div class="tab_all tab_body" id="en">Cat</div>
+				<div class="tab_all tab_body" id="en">English Word</div>
 			</div>
 
 			<div class="clear_float"></div>
 			
 			<div class="horizontal_wrap">
 				<div class="tab_all tab_header">Polski</div>
-				<div class="tab_all tab_body" id="pl">Kot</div>
+				<div class="tab_all tab_body" id="pl">Polish Word</div>
 			</div>
 
 			<div class="clear_float"></div>
 			
 			<div class="horizontal_wrap">
 				<div class="tab_all tab_header">Wymowa</div>
-				<div class="tab_all tab_body" id="pron">Kat</div>
+				<div class="tab_all tab_body" id="pron">Pronunciation</div>
 			</div>
 
 			<div class="clear_float"></div>
