draw next button works

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<!-- BUTTON FOR CHANGE LANGUAGE -->
 	<div id="div_button_top_right">
-		<button onclick="change_language_button()" id="change_language_button_style"> 
+		<button onclick="changeLanguage()" id="change_language_button_style"> 
 			<span id="spEN">EN</span> / <span id="spPL">PL</span></button>
 	</div>
 
@@ -50,11 +50,11 @@
 		<div class="dis_block"></div>
 		<!------------------------------ BUTTONS ------------------------------>
 		<div class="centered">
-			<div id="div_button_1"><Button onclick="draw_previous()">Draw previous</Button></div>
-			<div id="div_button_2"><Button onclick="draw_next()">Draw next</Button></div>
+			<div id="div_button_1"><Button onclick="drawPrev()">Draw previous</Button></div>
+			<div id="div_button_2"><Button onclick="drawNext()">Draw next</Button></div>
 		</div>
 		
-		<div id="div_button_3"><Button onclick="hide_show_button()">Hide / Show</Button></div>
+		<div id="div_button_3"><Button onclick="hideShow()">Hide / Show</Button></div>
 
 
 	</div>
